@@ -1,3 +1,9 @@
+2002-01-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/style.c (merge_styles):
+	fixed core dump w/ multiple use of the UseStyle style and HilightBack
+	in the copied style
+
 2002-01-01  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* libs/defaults.h:
